service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  nginx
  labels:
    run:  nginx
spec:
  selector:
    run:  nginx
  ports:
  - port:  80
    protocol: TCP
    targetPort:  80
  type: LoadBalancer
