service/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: yczhang.k8s
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
